# TrackShot

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  check_dataset.py  create_tiles.py  data.yaml  export.py  pyproject.toml  rewrite_main.py  train.py
checkpoints/best_saved_model/: best_full_integer_quant.tflite  best_int8.tflite  best_integer_quant.tflite  fingerprint.pb  metadata.yaml
configs/: train.yaml
configs/data/: data.yaml  default.yaml
configs/model/: default.yaml
datasets/coco8/labels/: val.cache
tests/: test_data.py
trackshot/data/: data_downloder.py  dataset.py  visualize.py
trackshot/esp32/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults
trackshot/esp32/inference/: inference.cpp  inference.h
trackshot/esp32/main/: CMakeLists.txt  camera.cpp  camera.h  idf_component.yml  main.cpp
trackshot/esp32/model/: model.h
trackshot/models/: architecture.py  yolov8-pico.yaml
trackshot/utils/: model_c_converter.py  profile_tflite.py
