[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trackshot"
version = "0.0.1"
description = "Real-time ball detection and tracking on the edge using a custom-trained YOLOv8n model deployed on an ESP32-S3 microcontroller with a live web dashboard."
authors = [
  { name = "PierGit7" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "absl-py",
    "torch>=2.4.0,<2.10.0",
    "torchvision>=0.19.0",
    "torchaudio>=2.4.0",
    "torchao",
    "ai-edge-litert-nightly[model-utils]",
    "ai-edge-quantizer-nightly",
    "litert-converter>=0.0.0.dev0",
    "litert-torch",
    "jax[cpu]",
    "scipy",
    "numpy",
    "tabulate",
    "safetensors",
    "kagglehub",
    "transformers",
    "multipledispatch",
    "jaxtyping",
    "fire",
    "rich",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "ultralytics",
    "pillow",
    "opencv-python-headless",
    "python-dotenv",
    "tensorflow>=2.0.0",
    "onnx>=1.12.0,<2.0.0", 
    "onnxslim>=0.1.71",
    "onnxruntime",
    "tf_keras",
    "sng4onnx>=1.0.1",
    "onnx_graphsurgeon>=0.3.26",
    "onnx2tf>=1.26.3"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff"
]

[tool.uv]
prerelease = "allow"

[tool.ruff]
line-length = 99
src = ["trackshot"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["trackshot"]
force-sort-within-sections = true
